2009-02-14  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Added a keyboard shortcut for inserting a new line ( \\ ).
 * Make cursor placed behind inserted text for most cases. 
   (Inserting BibTeX entries will not reset the cursor)


2009-01-19  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Improved reference dialog to offer labels based on aux file


2008-11-17  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Added a submenu supporting inserting bibtex entries


2008-11-14  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Applied a patch by Enrico which corrects some spelling
   mistakes and cleans up code a bit.


2008-11-02  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Make usage of Geany API v104 by using of Geany's plugin init
   locale function.


2008-10-29  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * GeanyLaTeX 0.2 release


2008-10-14  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Updated to Geany Plugin API v100 (add_document_sensitive())


2008-09-01  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * src/geanylatex.c: Added support for l10n.


2008-09-01  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Ported build system of spellcheck plugin.


2008-07-15  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Make plugin work together with Geany plugin API v78.


2008-07-11  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Make plugin compile with Geany svn r2767.


2008-06-26  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Update of used plugin API to v71.


2008-06-17  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * configure.in:
   Fix build using autogen.sh (Makefile.in was not created).
 * latexencodings.h:
   Fix multiple definition of latex_encodings array.


2008-06-17  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Moved plugin to geany-plugin svn.