@@ -84,7 +84,8 @@ plugins = [
 		 [ 'geanylatex/src/latexencodings.c', 'geanylatex/src/geanylatex.c',
 		   'geanylatex/src/letters.c', 'geanylatex/src/bibtex.c',
 		   'geanylatex/src/bibtexlabels.c', 'geanylatex/src/reftex.c',
-		   'geanylatex/src/latexutils.c'],
+		   'geanylatex/src/latexutils.c', 'geanylatex/src/formatutils.c',
+		   'geanylatex/src/formatpatterns.c'],
 		 [ 'geanylatex' ], # include dirs
 		 '0.3'),
 	Plugin('geanylua',
