@@ -1,7 +1,12 @@
+2009-02-15  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
+
+ * Added a menu entry for easy formating of text
+
+
 2009-02-14  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * Added a keyboard shortcut for inserting a new line ( \\ ).
- * Make cursor placed behind inserted text for most cases. 
+ * Make cursor placed behind inserted text for most cases.
    (Inserting BibTeX entries will not reset the cursor)
 
 
